name: shine
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) 2016 Francesco Gazzetta
author: Francesco Gazzetta
maintainer: Francesco Gazzetta <francygazz@gmail.com>
stability: experimental
homepage: https://github.com/fgaz/shine
bug-reports: https://github.com/fgaz/shine/issues
synopsis: Declarative graphics for the browser using GHCJS
description:
  Shine wraps javascript's drawing functions in a declarative API.
  Heavily inspired by Gloss.
  .
  Read the README for an overview of the library.
extra-source-files:  README.md
category: Web, Graphics
data-dir: ""

source-repository head
    type: git
    location: https://github.com/fgaz/shine

library
    exposed-modules: Graphics.Shine,
                     Graphics.Shine.Input,
                     Graphics.Shine.Image,
                     Graphics.Shine.Picture,
                     Graphics.Shine.Render
    build-depends: base >=4.2 && <5,
                   ghcjs-dom >=0.2 && <0.3,
                   ghcjs-prim,
                   keycode,
                   time,
                   mtl,
                   transformers
    hs-source-dirs: src
    ghc-options: -O2 -Wall

 --TODO run this in an actual window
test-suite test-shine
    type:       exitcode-stdio-1.0
    main-is:    everything.hs
    hs-source-dirs: tests
    build-depends: base, ghcjs-dom, shine
