name: shine
version: 0.2.0.4
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) 2016-2019 Francesco Gazzetta
author: Francesco Gazzetta
maintainer: Francesco Gazzetta <fgaz@fgaz.me>
stability: experimental
homepage: https://github.com/fgaz/shine
bug-reports: https://github.com/fgaz/shine/issues
synopsis: Declarative graphics for the browser using GHCJS
description:
  Shine wraps javascript's drawing functions in a declarative API.
  Heavily inspired by Gloss.
  .
  Read the README for an overview of the library.
extra-source-files:  README.md, ChangeLog.md
category: Web, Graphics, Javascript
data-dir: ""

source-repository head
    type: git
    location: https://github.com/fgaz/shine

library
    exposed-modules: Graphics.Shine,
                     Graphics.Shine.Input,
                     Graphics.Shine.Image,
                     Graphics.Shine.Picture,
                     Graphics.Shine.Render
    build-depends: base >=4.11 && <4.13,
                   ghcjs-dom >=0.9 && <0.10,
                   ghcjs-prim >=0.1 && <0.2,
                   keycode >=0.2 && <0.3,
                   time >=1.8 && <1.10,
                   mtl >=2.2 && <2.3,
                   transformers >=0.5 && <0.6
    hs-source-dirs: src
    ghc-options: -O2 -Wall

