cabal-version:      2.2
name:               shine-examples
version:            0.1
build-type:         Simple
license:            MIT
maintainer: Francesco Gazzetta <fgaz@fgaz.me>
homepage: https://github.com/fgaz/shine/tree/master/shine-examples
bug-reports: https://github.com/fgaz/shine/issues
synopsis: Examples for the shine package
description:
  This package contains some examples of use of the shine package,
  from animations to a simple game.
category: Web, Graphics, Javascript, Game
extra-source-files: README.md

common common-deps
    build-depends:      base      ^>= 4.11
                               || ^>= 4.12
                      , shine     ^>= 0.2
                      , ghcjs-dom ^>= 0.9

-- See the README for additional instructions on how to run animated-shapes
executable animated-shapes
    import:             common-deps
    main-is:            Main.hs
    hs-source-dirs:     animated-shapes
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -Wno-missing-home-modules
    ghcjs-options:      -dedupe
    cpp-options:        -DGHCJS_BROWSER
    if !impl(ghcjs)
        buildable:      False

executable simple-interaction
    import:             common-deps
    main-is:            Main.hs
    hs-source-dirs:     simple-interaction
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -Wno-missing-home-modules
    ghcjs-options:      -dedupe
    cpp-options:        -DGHCJS_BROWSER
    if !impl(ghcjs)
        buildable:      False

executable spaceinvaders
    import:             common-deps
    main-is:            Main.hs
    other-modules:      Game Point
    hs-source-dirs:     spaceinvaders
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -Wno-missing-home-modules
    ghcjs-options:      -dedupe
    cpp-options:        -DGHCJS_BROWSER
    build-depends:      containers ^>= 0.6
                      , keycode    ^>= 0.2
                      , random     ^>= 1.1
    if !impl(ghcjs)
        buildable:      False

executable mountaincar
    import:             common-deps
    main-is:            Main.hs
    other-modules:      Game MountainCar Point
    hs-source-dirs:     mountaincar
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -Wno-missing-home-modules
    ghcjs-options:      -dedupe
    cpp-options:        -DGHCJS_BROWSER
    build-depends:      containers ^>= 0.6
                      , keycode    ^>= 0.2
                      , random     ^>= 1.1
    if !impl(ghcjs)
        buildable:      False

