name:               spaceinvaders
version:            0.1
build-type:         Simple
cabal-version:      >=1.10
license:            MIT

executable spaceinvaders
    main-is:            Main.hs
    other-modules:      Game Point
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -O -threaded -Wall -Wno-missing-home-modules
    ghcjs-options:      -dedupe
    cpp-options:        -DGHCJS_BROWSER
    build-depends:      base, containers, ghcjs-dom, keycode, random, shine
    if !impl(ghcjs)
        buildable:      False

